# anime-muip

./: README.md  example.py  pyproject.toml
.github/workflows/: python-publish.yml
anime_muip/: __main__.py
